Fix and added tests

--- a/covid/population.html
+++ b/covid/population.html
@@ -7,16 +7,13 @@
     <body>
         <br>
         <form action="/population" name="population_form" id="population_form">
-            <label for="date">Request date</label><br>                                    
-            <input type="text" id="date" name="date">
-            <br><br>
             <label for="population">Population</label><br>                        
             <input type="text" id="population" name="population">
             <br><br>
-            <label for="fname">Country</label><br>
+            <label for="name">Country</label><br>
             <input type="text" id="name" name="name">
             <br><br>
-            <label for="lcontinent">Continent</label><br>            
+            <label for="continent">Continent</label><br>            
             <input type="text" id="continent" name="continent">
             <br><br>
             <input type="submit">
